// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PullSecretSection /> with error should render 1`] = `
<Fragment>
  <Text
    component="p"
  >
    Download or copy your pull secret. You'll be prompted for this information during installation.
  </Text>
  <div>
    <DownloadPullSecret
      text="Download pull secret"
      token={
        Object {
          "error": "my error",
        }
      }
    />
    <CopyPullSecret
      text="Copy pull secret"
      token={
        Object {
          "error": "my error",
        }
      }
      variant="link"
    />
  </div>
</Fragment>
`;

exports[`<PullSecretSection /> with token should render 1`] = `
<Fragment>
  <Text
    component="p"
  >
    Download or copy your pull secret. You'll be prompted for this information during installation.
  </Text>
  <div>
    <DownloadPullSecret
      text="Download pull secret"
      token={
        Object {
          "auths": Object {
            "foo": "bar",
          },
        }
      }
    />
    <CopyPullSecret
      text="Copy pull secret"
      token={
        Object {
          "auths": Object {
            "foo": "bar",
          },
        }
      }
      variant="link"
    />
  </div>
</Fragment>
`;
